# signals

./: CMakeLists.txt  README.md  main.c  sigconfig.h  signame.c  signame.h  signame_gen.sh  utils.c  utils.h
